[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Benedikt Bastin"]
description = "A simple DynDNS server to update Hetzner DNS records with your dynamic IP address assigned by your Internet Service Provider (ISP)."
readme = "README.md"
homepage = "https://github.com/bbastin/dyndns"
repository = "https://github.com/bbastin/dyndns"
documentation = "https://github.com/bbastin/dyndns"
keywords = ["dns"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"]}
rocket = "0.5.0"
serde = { version = "1.0.193", features = ["serde_derive"]}
serde_json = "1.0.108"
simple_logger = "4.3.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full"]}
