# SPDX-FileCopyrightText: 2023 Benedikt Bastin
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dyndns"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Benedikt Bastin"]
description = "A simple DynDNS server to update Hetzner DNS records with your dynamic IP address assigned by your Internet Service Provider (ISP)."
readme = "README.md"
homepage = "https://github.com/bbastin/dyndns"
repository = "https://github.com/bbastin/dyndns"
documentation = "https://github.com/bbastin/dyndns"
keywords = ["dns"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.*"
log = "0.4.*"
reqwest = { version = "0.11.*", features = ["json"]}
rocket = "0.5.*"
serde = { version = "1.*", features = ["serde_derive"]}
serde_json = "1.*"
simple_logger = "4.*"
strum = { version = "0.25.*", features = ["derive"] }
strum_macros = "0.25.*"
tokio = { version = "1.*", features = ["full"]}

