# SPDX-FileCopyrightText: 2023 Benedikt Bastin
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dyndns"
version = "0.3.7"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Benedikt Bastin"]
description = "A simple DynDNS server to update Hetzner DNS records with your dynamic IP address assigned by your Internet Service Provider (ISP)."
readme = "README.md"
homepage = "https://github.com/bbastin/dyndns"
repository = "https://github.com/bbastin/dyndns"
documentation = "https://github.com/bbastin/dyndns"
keywords = ["dns"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
log = { version = "0.4", default-features = false }
mockall = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rocket = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = ["serde_derive"] }
serde_json = { version = "1", default-features = false }
simple_logger = { version = "5", default-features = false }
strum_macros = { version = "0.27", default-features = false }
tokio = { version = "1", default-features = false }
